fix main align-self end

--- a/packages/ui/main/main.module.css
+++ b/packages/ui/main/main.module.css
@@ -1,6 +1,7 @@
 .main {
     display: flex;
     flex-direction: column;
+    align-self: flex-end;
     box-sizing: border-box;
     width: 100%;
     transition: width 0.3s;
